094_binsrch/grade.txt
Grading at 11/05/2018:21:30:49.961015
For commit ID 1d16ada5c4b4c982338f3995a31fb14015bb174d
Stripping out any main you may have written, and compiling...
newsearch.cpp:6:25: error: ‘Function’ was not declared in this scope
 int binarySearchForZero(Function<int, int> * f, int low, int high) {
                         ^~~~~~~~
newsearch.cpp:6:25: note: suggested alternative: ‘union’
 int binarySearchForZero(Function<int, int> * f, int low, int high) {
                         ^~~~~~~~
                         union
newsearch.cpp:6:34: error: expected primary-expression before ‘int’
 int binarySearchForZero(Function<int, int> * f, int low, int high) {
                                  ^~~
newsearch.cpp:6:39: error: expected primary-expression before ‘int’
 int binarySearchForZero(Function<int, int> * f, int low, int high) {
                                       ^~~
newsearch.cpp:6:49: error: expected primary-expression before ‘int’
 int binarySearchForZero(Function<int, int> * f, int low, int high) {
                                                 ^~~
newsearch.cpp:6:58: error: expected primary-expression before ‘int’
 int binarySearchForZero(Function<int, int> * f, int low, int high) {
                                                          ^~~
newsearch.cpp:6:66: error: expression list treated as compound expression in initializer [-fpermissive]
 int binarySearchForZero(Function<int, int> * f, int low, int high) {
                                                                  ^
The code did not compile

Overall Grade: F
